# openMVG

src/openMVG/features/: CMakeLists.txt
src/openMVG/image/: CMakeLists.txt  image_concat.hpp  image_container.hpp  image_test.cpp  pixel_types.hpp
src/openMVG/matching/: CMakeLists.txt
src/openMVG/numeric/: CMakeLists.txt
src/patented/sift/: CMakeLists.txt
